@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 12
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam rectangle {
  BorderColor #344054
  FontColor #101828
}
skinparam package {
  BorderColor #667085
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure - Suggest promising photos
skinparam class {
 BorderColor #344054
 FontColor #101828
 BackgroundColor #F9FAFB
}
class PhotoAnalysis {
 +Guid Id
 +Guid PhotoId
 +AnalysisState State
 +string ModelVersion
 +string PromptVersion
 +string? Explanation
 +Complete(findings: QualityFinding[]): void
}
class QualityFinding {
 +string Criterion
 +FindingOutcome Outcome
 +string Explanation
}
PhotoAnalysis "1" *-- "0..*" QualityFinding : Owned advisory finding
interface IStudioStore {
 +Run<T>(lockKey, action): Task<T>
}
interface IStudioTransaction {
 +Get<T>(id): Task<T?>
 +List<T>(): Task<T[]>
 +Save<T>(value, expectedVersion): Task
}
IStudioStore ..> IStudioTransaction : scopes one committed unit of work
IStudioStore o-- PhotoAnalysis : persists or supplies inputs
interface IPhotoAnalysisService
class AnalyzePhotoHandler
AnalyzePhotoHandler ..> IPhotoAnalysisService : uses
AnalyzePhotoHandler ..> PhotoAnalysis : orchestrates
@enduml
